--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
   </style>
 </head>
 <body>
-  <a href="https://vimeo.com/1097683092/0bbf9971e1?share=copyautoplay=1" target="_blank" rel="noopener noreferrer">
+  <<a href="https://player.vimeo.com/video/1097683092/0bbf9971e1?share=copyautoplay=1&fullscreen=1&title=0&byline=0&portrait=0" target="_blank" rel="noopener noreferrer">
+  <img src="your-image.png" alt="Click to watch video" />
+</a>
+>
     <img src="Generate Button for Landing Page.png" alt="Click to watch video" />
   </a>
 </body>
