--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>It's All Fixed Now</title>
+  <title>Landing Page</title>
   <style>
     body {
       margin: 0;
@@ -74,14 +74,14 @@
     const modal = document.getElementById('videoModal');
     const player = document.getElementById('vimeoPlayer');
 
-    const vimeoID = "12345678"; // Replace with your Vimeo ID
+    // Use the full Vimeo embed link, including the token after ?h=
+    const vimeoEmbedUrl = "<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1097683092?h=0bbf9971e1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Majesto: The Box Protocol"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>";
 
     launchBtn.addEventListener('click', () => {
-      player.src = `https://player.vimeo.com/video/${1097683092}?autoplay=1&muted=1&title=0&byline=0&portrait=0`;
+      player.src = vimeoEmbedUrl;
       modal.classList.add('active');
     });
 
-    // Close modal on click outside video or ESC key
     modal.addEventListener('click', (e) => {
       if (e.target === modal) {
         modal.classList.remove('active');
