--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     const player = document.getElementById('vimeoPlayer');
 
     // Use the full Vimeo embed link, including the token after ?h=
-    const vimeoEmbedUrl = "<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1097683092?h=0bbf9971e1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Majesto: The Box Protocol"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>";
+    const vimeoEmbedUrl = "https://player.vimeo.com/video/1097683092?h=0bbf9971e1&amp;badge=0&autoplay=1&title=0&byline=0&portrait=0";
 
     launchBtn.addEventListener('click', () => {
       player.src = vimeoEmbedUrl;
